update docker build